// Code generated with goa v3.3.1, DO NOT EDIT.
//
// InjectiveExchangeRPC protocol buffer definition
//
// Command:
// $ goa gen github.com/InjectiveLabs/injective-exchange/api/design -o ../

syntax = "proto3";

package injective_exchange_rpc;

option go_package = "/injective_exchange_rpcpb";

// InjectiveExchangeRPC defines gRPC API of an Injective Exchange service.
service InjectiveExchangeRPC {
	// Endpoint for checking server health.
	rpc Ping (PingRequest) returns (PingResponse);
	// Returns injective-exchange version.
	rpc Version (VersionRequest) returns (VersionResponse);
	// GetTx gets transaction details by hash.
	rpc GetTx (GetTxRequest) returns (GetTxResponse);
	// PrepareTx generates a Web3-signable body for a Cosmos transaction
	rpc PrepareTx (PrepareTxRequest) returns (PrepareTxResponse);
	// BroadcastTx broadcasts a signed Web3 transaction
	rpc BroadcastTx (BroadcastTxRequest) returns (BroadcastTxResponse);
}

message PingRequest {
}

message PingResponse {
}

message VersionRequest {
}

message VersionResponse {
	// injective-exchange code version.
	string version = 1;
	// Additional meta data.
	map<string, string> meta_data = 2;
}

message GetTxRequest {
	// Transaction hash in hex without 0x prefix (Cosmos-like).
	string hash = 1;
}

message GetTxResponse {
	// Hex-encoded Tendermint transaction hash
	string tx_hash = 1;
	// The block height
	sint64 height = 2;
	// Tx index in the block
	uint32 index = 3;
	// Namespace for the resp code
	string codespace = 4;
	// Response code
	uint32 code = 5;
	// Result bytes, if any
	bytes data = 6;
	// The output of the application's logger (raw string). May be
// non-deterministic.
	string raw_log = 7;
	// Time of the previous block.
	string timestamp = 8;
}

message PrepareTxRequest {
	// Specify chainID for the target tx
	uint64 chain_id = 1;
	// Specify Ethereum address of a signer
	string signer_address = 2;
	// Account sequence number (nonce) of signer
	uint64 sequence = 3;
	// Textual memo information to attach with tx
	string memo = 4;
	// Block height until which the transaction is valid.
	uint64 timeout_height = 5;
	// Transaction fee details.
	CosmosTxFee fee = 6;
	// List of Cosmos proto3-encoded Msgs to include in a single tx
	repeated bytes msgs = 7;
}

message CosmosTxFee {
	// List of coins for the fee
	repeated CosmosCoin amounts = 1;
	// Transaction gas limit
	uint64 gas = 2;
}

message CosmosCoin {
	// Coin denominator
	string denom = 1;
	// Coin amount (big int)
	string amount = 2;
}

message PrepareTxResponse {
	// EIP712-compatible message suitable for signing with eth_signTypedData_v4
	string data = 1;
	// Account tx sequence (nonce)
	uint64 sequence = 2;
	// Sign mode for the resulting tx
	string sign_mode = 3;
	// Specify proto-URL of a public key, which defines the signature format
	string pub_key_type = 4;
}

message BroadcastTxRequest {
	// Specify Web3 chainID (from prepateTx) for the target Tx
	uint64 chain_id = 1;
	// Amino-encoded Tx JSON data (except Msgs)
	bytes tx = 2;
	// List of Cosmos proto3-encoded Msgs from tx
	repeated bytes msgs = 3;
	// Specify ethsecp256k1 pubkey of the signer
	CosmosPubKey pub_key = 4;
	// Hex-encoded ethsecp256k1 signature bytes
	string signature = 5;
	// Broadcast mode
	string mode = 6;
}

message CosmosPubKey {
	// Pubkey type URL
	string type = 1;
	// Hex-encoded string of the public key
	string key = 2;
}

message BroadcastTxResponse {
	// Hex-encoded Tendermint transaction hash
	string tx_hash = 1;
	// The block height
	sint64 height = 2;
	// Tx index in the block
	uint32 index = 3;
	// Namespace for the resp code
	string codespace = 4;
	// Response code
	uint32 code = 5;
	// Result bytes, if any
	bytes data = 6;
	// The output of the application's logger (raw string). May be
// non-deterministic.
	string raw_log = 7;
	// Time of the previous block.
	string timestamp = 8;
}
